[gd_scene load_steps=7 format=2]

[ext_resource path="res://HouseTiles128x128/HouseTileset.tres" type="TileSet" id=1]
[ext_resource path="res://particles/chests/Chests.gd" type="Script" id=2]
[ext_resource path="res://particles/chests/chest1.tscn" type="PackedScene" id=3]
[ext_resource path="res://particles/MoveArea/MoveArea.gd" type="Script" id=4]
[ext_resource path="res://particles/MoveArea/MoveArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://particles/SwitchArea/SwitchArea.tscn" type="PackedScene" id=6]

[node name="house1" type="Node2D"]

_sections_unfolded = [ "Transform", "Visibility" ]

[node name="floor" type="TileMap" parent="." index="0"]

mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1245167, 36, 0, -1179631, 36, 0, -1179630, 36, 0, -1114107, 6, 0, -1114106, 6, 0, -1114105, 6, 0, -1114104, 6, 0, -1114103, 6, 0, -1114102, 6, 0, -1114101, 6, 0, -1114100, 6, 0, -1114099, 6, 0, -1114098, 6, 0, -1114097, 6, 0, -1048571, 6, 0, -1048570, 6, 0, -1048569, 6, 0, -1048568, 6, 0, -1048567, 6, 0, -1048566, 6, 0, -1048565, 6, 0, -1048564, 6, 0, -1048563, 6, 0, -1048562, 6, 0, -1048561, 6, 0, -1048559, 6, 0, -983036, 6, 0, -983035, 6, 0, -983034, 6, 0, -983033, 6, 0, -983032, 6, 0, -983031, 6, 0, -983030, 6, 0, -983029, 6, 0, -983028, 6, 0, -983027, 6, 0, -983026, 6, 0, -983025, 6, 0, -983024, 6, 0, -983023, 6, 0, -983022, 6, 0, -917499, 6, 0, -917498, 6, 0, -917497, 6, 0, -917496, 6, 0, -917495, 6, 0, -917494, 6, 0, -917493, 6, 0, -917492, 6, 0, -917491, 6, 0, -917490, 6, 0, -917489, 6, 0, -917488, 6, 0, -917487, 6, 0, -917486, 6, 0, -851963, 6, 0, -851962, 6, 0, -851961, 6, 0, -851960, 6, 0, -851959, 6, 0, -851958, 6, 0, -851957, 6, 0, -851956, 6, 0, -851955, 6, 0, -851954, 6, 0, -851953, 6, 0, -851952, 6, 0, -851951, 6, 0, -851950, 6, 0, -786427, 6, 0, -786426, 6, 0, -786425, 6, 0, -786424, 6, 0, -786423, 6, 0, -786422, 6, 0, -786421, 6, 0, -786420, 6, 0, -786414, 6, 0, -720891, 6, 0, -720890, 6, 0, -720889, 6, 0, -720888, 6, 0, -720887, 6, 0, -655355, 6, 0, -655354, 6, 0, -655353, 6, 0, -655352, 6, 0, -655351, 6, 0, -589819, 6, 0, -589818, 6, 0, -589817, 6, 0, -589816, 6, 0, -589815, 6, 0, -524283, 6, 0, -524282, 6, 0, -524281, 6, 0, -524280, 6, 0, -524279, 6, 0, -458748, 6, 0, -458747, 6, 0, -458746, 6, 0, -458745, 6, 0, -458744, 6, 0, -458743, 6, 0, -393212, 34, 0, -393211, 6, 0, -393210, 6, 0, -393209, 6, 0, -393208, 6, 0, -393207, 6, 0, -327675, 6, 0, -327674, 6, 0, -327673, 6, 0, -327672, 6, 0, -327671, 6, 0, -262139, 6, 0, -262138, 6, 0, -262137, 6, 0, -262136, 6, 0, -262135, 6, 0, -196604, 36, 0, -196603, 6, 0, -196602, 6, 0, -196601, 6, 0, -196600, 6, 0, -196599, 6, 0, -131068, 36, 0 )
_sections_unfolded = [ "Cell" ]

[node name="Chests" type="Node2D" parent="." index="1"]

editor/display_folded = true
script = ExtResource( 2 )

[node name="chest1" parent="Chests" index="0" instance=ExtResource( 3 )]

position = Vector2( 1804.32, -146.505 )

[node name="chest2" parent="Chests" index="1" instance=ExtResource( 3 )]

position = Vector2( 1963.32, -56.8481 )

[node name="chest3" parent="Chests" index="2" instance=ExtResource( 3 )]

position = Vector2( 1792.94, 24.6385 )

[node name="chest4" parent="Chests" index="3" instance=ExtResource( 3 )]

position = Vector2( 1632.92, -79.0891 )

[node name="walls" type="TileMap" parent="." index="2"]

mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1179644, 13, 0, -1179643, 20, 0, -1179642, 23, 0, -1179641, 20, 0, -1179640, 20, 0, -1179639, 20, 0, -1179638, 13, 0, -1179637, 20, 0, -1179636, 20, 0, -1179635, 23, 0, -1179634, 20, 0, -1179633, 20, 0, -1179632, 20, 0, -1179631, 24, 0, -1114108, 24, 0, -1114102, 24, 0, -1114095, 24, 0, -1048572, 24, 0, -1048571, 30, 0, -1048570, 28, 0, -1048569, 29, 0, -1048566, 24, 0, -1048559, 24, 0, -983036, 27, 0, -983035, 30, 0, -983034, 28, 0, -983033, 29, 0, -983030, 26, 0, -983023, 24, 0, -917500, 24, 0, -917494, 24, 0, -917487, 24, 0, -851964, 24, 0, -851958, 24, 0, -851951, 24, 0, -786428, 24, 0, -786422, 24, 0, -786416, 5, 0, -720892, 13, 0, -720891, 20, 0, -720890, 22, 0, -720889, 20, 0, -720888, 20, 0, -720887, 20, 0, -720886, 13, 0, -720885, 20, 0, -720884, 20, 0, -720883, 20, 0, -720882, 20, 0, -720881, 20, 0, -655356, 24, 0, -655350, 24, 0, -589820, 24, 0, -589814, 27, 0, -524284, 24, 0, -524283, 30, 0, -524282, 28, 0, -524281, 29, 0, -524278, 27, 0, -458748, 27, 0, -458747, 30, 0, -458746, 28, 0, -458745, 29, 0, -458742, 24, 0, -393212, 24, 0, -393206, 24, 0, -327676, 24, 0, -327670, 26, 0, -262140, 24, 0, -262134, 24, 0, -196604, 24, 0, -196599, 5, 0, -131068, 20, 0, -131067, 20, 0, -131066, 23, 0, -131065, 23, 0, -131064, 20, 0, -131063, 20, 0 )
_sections_unfolded = [ "Cell" ]

[node name="fill" type="TileMap" parent="." index="3"]

mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1638407, 36, 0, -1638406, 36, 0, -1638405, 36, 0, -1638404, 36, 0, -1638403, 36, 0, -1638402, 36, 0, -1638401, 36, 0, -1703936, 36, 0, -1703935, 36, 0, -1703934, 36, 0, -1703933, 36, 0, -1703932, 36, 0, -1703931, 36, 0, -1703930, 36, 0, -1703929, 36, 0, -1703928, 36, 0, -1703927, 36, 0, -1703926, 36, 0, -1703925, 36, 0, -1703924, 36, 0, -1703923, 36, 0, -1703922, 36, 0, -1703921, 36, 0, -1703920, 36, 0, -1703919, 36, 0, -1703918, 36, 0, -1703917, 36, 0, -1703916, 36, 0, -1703915, 36, 0, -1703914, 36, 0, -1703913, 36, 0, -1703912, 36, 0, -1703911, 36, 0, -1703910, 36, 0, -1703909, 36, 0, -1572871, 36, 0, -1572870, 36, 0, -1572869, 36, 0, -1572868, 36, 0, -1572867, 36, 0, -1572866, 36, 0, -1572865, 36, 0, -1638400, 36, 0, -1638399, 36, 0, -1638398, 36, 0, -1638397, 36, 0, -1638396, 36, 0, -1638395, 36, 0, -1638394, 36, 0, -1638393, 36, 0, -1638392, 36, 0, -1638391, 36, 0, -1638390, 36, 0, -1638389, 36, 0, -1638388, 36, 0, -1638387, 36, 0, -1638386, 36, 0, -1638385, 36, 0, -1638384, 36, 0, -1638383, 36, 0, -1638382, 36, 0, -1638381, 36, 0, -1638380, 36, 0, -1638379, 36, 0, -1638378, 36, 0, -1638377, 36, 0, -1638376, 36, 0, -1638375, 36, 0, -1638374, 36, 0, -1638373, 36, 0, -1507335, 36, 0, -1507334, 36, 0, -1507333, 36, 0, -1507332, 36, 0, -1507331, 36, 0, -1507330, 36, 0, -1507329, 36, 0, -1572864, 36, 0, -1572863, 36, 0, -1572862, 36, 0, -1572861, 36, 0, -1572860, 36, 0, -1572859, 36, 0, -1572858, 36, 0, -1572857, 36, 0, -1572856, 36, 0, -1572855, 36, 0, -1572854, 36, 0, -1572853, 36, 0, -1572852, 36, 0, -1572851, 36, 0, -1572850, 36, 0, -1572849, 36, 0, -1572848, 36, 0, -1572847, 36, 0, -1572846, 36, 0, -1572845, 36, 0, -1572844, 36, 0, -1572843, 36, 0, -1572842, 36, 0, -1572841, 36, 0, -1572840, 36, 0, -1572839, 36, 0, -1572838, 36, 0, -1572837, 36, 0, -1441799, 36, 0, -1441798, 36, 0, -1441797, 36, 0, -1441796, 36, 0, -1441795, 36, 0, -1441794, 36, 0, -1441793, 36, 0, -1507328, 36, 0, -1507327, 36, 0, -1507326, 36, 0, -1507325, 36, 0, -1507324, 36, 0, -1507323, 36, 0, -1507322, 36, 0, -1507321, 36, 0, -1507320, 36, 0, -1507319, 36, 0, -1507318, 36, 0, -1507317, 36, 0, -1507316, 36, 0, -1507315, 36, 0, -1507314, 36, 0, -1507313, 36, 0, -1507312, 36, 0, -1507311, 36, 0, -1507310, 36, 0, -1507309, 36, 0, -1507308, 36, 0, -1507307, 36, 0, -1507306, 36, 0, -1507305, 36, 0, -1507304, 36, 0, -1507303, 36, 0, -1507302, 36, 0, -1507301, 36, 0, -1376263, 36, 0, -1376262, 36, 0, -1376261, 36, 0, -1376260, 36, 0, -1376259, 36, 0, -1376258, 36, 0, -1376257, 36, 0, -1441792, 36, 0, -1441791, 36, 0, -1441790, 36, 0, -1441789, 36, 0, -1441788, 36, 0, -1441787, 36, 0, -1441786, 36, 0, -1441785, 36, 0, -1441784, 36, 0, -1441783, 36, 0, -1441782, 36, 0, -1441781, 36, 0, -1441780, 36, 0, -1441779, 36, 0, -1441778, 36, 0, -1441777, 36, 0, -1441776, 36, 0, -1441775, 36, 0, -1441774, 36, 0, -1441773, 36, 0, -1441772, 36, 0, -1441771, 36, 0, -1441770, 36, 0, -1441769, 36, 0, -1441768, 36, 0, -1441767, 36, 0, -1441766, 36, 0, -1441765, 36, 0, -1310727, 36, 0, -1310726, 36, 0, -1310725, 36, 0, -1310724, 36, 0, -1310723, 36, 0, -1310722, 36, 0, -1310721, 36, 0, -1376256, 36, 0, -1376255, 36, 0, -1376254, 36, 0, -1376253, 36, 0, -1376252, 36, 0, -1376251, 36, 0, -1376250, 36, 0, -1376249, 36, 0, -1376248, 36, 0, -1376247, 36, 0, -1376246, 36, 0, -1376245, 36, 0, -1376244, 36, 0, -1376243, 36, 0, -1376242, 36, 0, -1376241, 36, 0, -1376240, 36, 0, -1376239, 36, 0, -1376238, 36, 0, -1376237, 36, 0, -1376236, 36, 0, -1376235, 36, 0, -1376234, 36, 0, -1376233, 36, 0, -1376232, 36, 0, -1376231, 36, 0, -1376230, 36, 0, -1376229, 36, 0, -1245191, 36, 0, -1245190, 36, 0, -1245189, 36, 0, -1245188, 36, 0, -1245187, 36, 0, -1245186, 36, 0, -1245185, 36, 0, -1310720, 36, 0, -1310719, 36, 0, -1310718, 36, 0, -1310717, 36, 0, -1310716, 36, 0, -1310715, 36, 0, -1310714, 36, 0, -1310713, 36, 0, -1310712, 36, 0, -1310711, 36, 0, -1310710, 36, 0, -1310709, 36, 0, -1310708, 36, 0, -1310707, 36, 0, -1310706, 36, 0, -1310705, 36, 0, -1310704, 36, 0, -1310703, 36, 0, -1310702, 36, 0, -1310701, 36, 0, -1310700, 36, 0, -1310699, 36, 0, -1310698, 36, 0, -1310697, 36, 0, -1310696, 36, 0, -1310695, 36, 0, -1310694, 36, 0, -1310693, 36, 0, -1179655, 36, 0, -1179654, 36, 0, -1179653, 36, 0, -1179652, 36, 0, -1179651, 36, 0, -1179650, 36, 0, -1179649, 36, 0, -1245184, 36, 0, -1245183, 36, 0, -1245182, 36, 0, -1245181, 36, 0, -1245180, 36, 0, -1245179, 36, 0, -1245178, 36, 0, -1245177, 36, 0, -1245176, 36, 0, -1245175, 36, 0, -1245174, 36, 0, -1245173, 36, 0, -1245172, 36, 0, -1245171, 36, 0, -1245170, 36, 0, -1245169, 36, 0, -1245168, 36, 0, -1245167, 36, 0, -1245166, 36, 0, -1245165, 36, 0, -1245164, 36, 0, -1245163, 36, 0, -1245162, 36, 0, -1245161, 36, 0, -1245160, 36, 0, -1245159, 36, 0, -1245158, 36, 0, -1245157, 36, 0, -1114119, 36, 0, -1114118, 36, 0, -1114117, 36, 0, -1114116, 36, 0, -1114115, 36, 0, -1114114, 36, 0, -1114113, 36, 0, -1179648, 36, 0, -1179647, 36, 0, -1179646, 36, 0, -1179645, 36, 0, -1179630, 36, 0, -1179629, 36, 0, -1179628, 36, 0, -1179627, 36, 0, -1179626, 36, 0, -1179625, 36, 0, -1179624, 36, 0, -1179623, 36, 0, -1179622, 36, 0, -1179621, 36, 0, -1048583, 36, 0, -1048582, 36, 0, -1048581, 36, 0, -1048580, 36, 0, -1048579, 36, 0, -1048578, 36, 0, -1048577, 36, 0, -1114112, 36, 0, -1114111, 36, 0, -1114110, 36, 0, -1114109, 36, 0, -1114094, 36, 0, -1114093, 36, 0, -1114092, 36, 0, -1114091, 36, 0, -1114090, 36, 0, -1114089, 36, 0, -1114088, 36, 0, -1114087, 36, 0, -1114086, 36, 0, -1114085, 36, 0, -983047, 36, 0, -983046, 36, 0, -983045, 36, 0, -983044, 36, 0, -983043, 36, 0, -983042, 36, 0, -983041, 36, 0, -1048576, 36, 0, -1048575, 36, 0, -1048574, 36, 0, -1048573, 36, 0, -1048558, 36, 0, -1048557, 36, 0, -1048556, 36, 0, -1048555, 36, 0, -1048554, 36, 0, -1048553, 36, 0, -1048552, 36, 0, -1048551, 36, 0, -1048550, 36, 0, -1048549, 36, 0, -917511, 36, 0, -917510, 36, 0, -917509, 36, 0, -917508, 36, 0, -917507, 36, 0, -917506, 36, 0, -917505, 36, 0, -983040, 36, 0, -983039, 36, 0, -983038, 36, 0, -983037, 36, 0, -983022, 36, 0, -983021, 36, 0, -983020, 36, 0, -983019, 36, 0, -983018, 36, 0, -983017, 36, 0, -983016, 36, 0, -983015, 36, 0, -983014, 36, 0, -983013, 36, 0, -851975, 36, 0, -851974, 36, 0, -851973, 36, 0, -851972, 36, 0, -851971, 36, 0, -851970, 36, 0, -851969, 36, 0, -917504, 36, 0, -917503, 36, 0, -917502, 36, 0, -917501, 36, 0, -917486, 36, 0, -917485, 36, 0, -917484, 36, 0, -917483, 36, 0, -917482, 36, 0, -917481, 36, 0, -917480, 36, 0, -917479, 36, 0, -917478, 36, 0, -917477, 36, 0, -786439, 36, 0, -786438, 36, 0, -786437, 36, 0, -786436, 36, 0, -786435, 36, 0, -786434, 36, 0, -786433, 36, 0, -851968, 36, 0, -851967, 36, 0, -851966, 36, 0, -851965, 36, 0, -851950, 36, 0, -851949, 36, 0, -851948, 36, 0, -851947, 36, 0, -851946, 36, 0, -851945, 36, 0, -851944, 36, 0, -851943, 36, 0, -851942, 36, 0, -851941, 36, 0, -720903, 36, 0, -720902, 36, 0, -720901, 36, 0, -720900, 36, 0, -720899, 36, 0, -720898, 36, 0, -720897, 36, 0, -786432, 36, 0, -786431, 36, 0, -786430, 36, 0, -786429, 36, 0, -786414, 36, 0, -786413, 36, 0, -786412, 36, 0, -786411, 36, 0, -786410, 36, 0, -786409, 36, 0, -786408, 36, 0, -786407, 36, 0, -786406, 36, 0, -786405, 36, 0, -655367, 36, 0, -655366, 36, 0, -655365, 36, 0, -655364, 36, 0, -655363, 36, 0, -655362, 36, 0, -655361, 36, 0, -720896, 36, 0, -720895, 36, 0, -720894, 36, 0, -720893, 36, 0, -720878, 36, 0, -720877, 36, 0, -720876, 36, 0, -720875, 36, 0, -720874, 36, 0, -720873, 36, 0, -720872, 36, 0, -720871, 36, 0, -720870, 36, 0, -720869, 36, 0, -589831, 36, 0, -589830, 36, 0, -589829, 36, 0, -589828, 36, 0, -589827, 36, 0, -589826, 36, 0, -589825, 36, 0, -655360, 36, 0, -655359, 36, 0, -655358, 36, 0, -655357, 36, 0, -655349, 36, 0, -655348, 36, 0, -655347, 36, 0, -655346, 36, 0, -655345, 36, 0, -655344, 36, 0, -655343, 36, 0, -655342, 36, 0, -655341, 36, 0, -655340, 36, 0, -655339, 36, 0, -655338, 36, 0, -655337, 36, 0, -655336, 36, 0, -655335, 36, 0, -655334, 36, 0, -655333, 36, 0, -524295, 36, 0, -524294, 36, 0, -524293, 36, 0, -524292, 36, 0, -524291, 36, 0, -524290, 36, 0, -524289, 36, 0, -589824, 36, 0, -589823, 36, 0, -589822, 36, 0, -589821, 36, 0, -589813, 36, 0, -589812, 36, 0, -589811, 36, 0, -589810, 36, 0, -589809, 36, 0, -589808, 36, 0, -589807, 36, 0, -589806, 36, 0, -589805, 36, 0, -589804, 36, 0, -589803, 36, 0, -589802, 36, 0, -589801, 36, 0, -589800, 36, 0, -589799, 36, 0, -589798, 36, 0, -589797, 36, 0, -458759, 36, 0, -458758, 36, 0, -458757, 36, 0, -458756, 36, 0, -458755, 36, 0, -458754, 36, 0, -458753, 36, 0, -524288, 36, 0, -524287, 36, 0, -524286, 36, 0, -524285, 36, 0, -524277, 36, 0, -524276, 36, 0, -524275, 36, 0, -524274, 36, 0, -524273, 36, 0, -524272, 36, 0, -524271, 36, 0, -524270, 36, 0, -524269, 36, 0, -524268, 36, 0, -524267, 36, 0, -524266, 36, 0, -524265, 36, 0, -524264, 36, 0, -524263, 36, 0, -524262, 36, 0, -524261, 36, 0, -393223, 36, 0, -393222, 36, 0, -393221, 36, 0, -393220, 36, 0, -393219, 36, 0, -393218, 36, 0, -393217, 36, 0, -458752, 36, 0, -458751, 36, 0, -458750, 36, 0, -458749, 36, 0, -458741, 36, 0, -458740, 36, 0, -458739, 36, 0, -458738, 36, 0, -458737, 36, 0, -458736, 36, 0, -458735, 36, 0, -458734, 36, 0, -458733, 36, 0, -458732, 36, 0, -458731, 36, 0, -458730, 36, 0, -458729, 36, 0, -458728, 36, 0, -458727, 36, 0, -458726, 36, 0, -458725, 36, 0, -327687, 36, 0, -327686, 36, 0, -327685, 36, 0, -327684, 36, 0, -327683, 36, 0, -327682, 36, 0, -327681, 36, 0, -393216, 36, 0, -393215, 36, 0, -393214, 36, 0, -393213, 36, 0, -393205, 36, 0, -393204, 36, 0, -393203, 36, 0, -393202, 36, 0, -393201, 36, 0, -393200, 36, 0, -393199, 36, 0, -393198, 36, 0, -393197, 36, 0, -393196, 36, 0, -393195, 36, 0, -393194, 36, 0, -393193, 36, 0, -393192, 36, 0, -393191, 36, 0, -393190, 36, 0, -393189, 36, 0, -262151, 36, 0, -262150, 36, 0, -262149, 36, 0, -262148, 36, 0, -262147, 36, 0, -262146, 36, 0, -262145, 36, 0, -327680, 36, 0, -327679, 36, 0, -327678, 36, 0, -327677, 36, 0, -327669, 36, 0, -327668, 36, 0, -327667, 36, 0, -327666, 36, 0, -327665, 36, 0, -327664, 36, 0, -327663, 36, 0, -327662, 36, 0, -327661, 36, 0, -327660, 36, 0, -327659, 36, 0, -327658, 36, 0, -327657, 36, 0, -327656, 36, 0, -327655, 36, 0, -327654, 36, 0, -327653, 36, 0, -196615, 36, 0, -196614, 36, 0, -196613, 36, 0, -196612, 36, 0, -196611, 36, 0, -196610, 36, 0, -196609, 36, 0, -262144, 36, 0, -262143, 36, 0, -262142, 36, 0, -262141, 36, 0, -262133, 36, 0, -262132, 36, 0, -262131, 36, 0, -262130, 36, 0, -262129, 36, 0, -262128, 36, 0, -262127, 36, 0, -262126, 36, 0, -262125, 36, 0, -262124, 36, 0, -262123, 36, 0, -262122, 36, 0, -262121, 36, 0, -262120, 36, 0, -262119, 36, 0, -262118, 36, 0, -262117, 36, 0, -131079, 36, 0, -131078, 36, 0, -131077, 36, 0, -131076, 36, 0, -131075, 36, 0, -131074, 36, 0, -131073, 36, 0, -196608, 36, 0, -196607, 36, 0, -196606, 36, 0, -196605, 36, 0, -196597, 36, 0, -196596, 36, 0, -196595, 36, 0, -196594, 36, 0, -196593, 36, 0, -196592, 36, 0, -196591, 36, 0, -196590, 36, 0, -196589, 36, 0, -196588, 36, 0, -196587, 36, 0, -196586, 36, 0, -196585, 36, 0, -196584, 36, 0, -196583, 36, 0, -196582, 36, 0, -196581, 36, 0, -65543, 36, 0, -65542, 36, 0, -65541, 36, 0, -65540, 36, 0, -65539, 36, 0, -65538, 36, 0, -65537, 36, 0, -131072, 36, 0, -131071, 36, 0, -131070, 36, 0, -131069, 36, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 2, 0, -131063, 2, 0, -131061, 36, 0, -131060, 36, 0, -131059, 36, 0, -131058, 36, 0, -131057, 36, 0, -131056, 36, 0, -131055, 36, 0, -131054, 36, 0, -131053, 36, 0, -131052, 36, 0, -131051, 36, 0, -131050, 36, 0, -131049, 36, 0, -131048, 36, 0, -131047, 36, 0, -131046, 36, 0, -131045, 36, 0, -7, 36, 0, -6, 36, 0, -5, 36, 0, -4, 36, 0, -3, 36, 0, -2, 36, 0, -1, 36, 0, -65536, 36, 0, -65535, 36, 0, -65534, 36, 0, -65533, 36, 0, -65532, 36, 0, -65531, 36, 0, -65530, 36, 0, -65529, 36, 0, -65528, 36, 0, -65527, 36, 0, -65526, 36, 0, -65525, 36, 0, -65524, 36, 0, -65523, 36, 0, -65522, 36, 0, -65521, 36, 0, -65520, 36, 0, -65519, 36, 0, -65518, 36, 0, -65517, 36, 0, -65516, 36, 0, -65515, 36, 0, -65514, 36, 0, -65513, 36, 0, -65512, 36, 0, -65511, 36, 0, -65510, 36, 0, -65509, 36, 0, 65529, 36, 0, 65530, 36, 0, 65531, 36, 0, 65532, 36, 0, 65533, 36, 0, 65534, 36, 0, 65535, 36, 0, 0, 36, 0, 1, 36, 0, 2, 36, 0, 3, 36, 0, 4, 36, 0, 5, 36, 0, 6, 36, 0, 7, 36, 0, 8, 36, 0, 9, 36, 0, 10, 36, 0, 11, 36, 0, 12, 36, 0, 13, 36, 0, 14, 36, 0, 15, 36, 0, 16, 36, 0, 17, 36, 0, 18, 36, 0, 19, 36, 0, 20, 36, 0, 21, 36, 0, 22, 36, 0, 23, 36, 0, 24, 36, 0, 25, 36, 0, 26, 36, 0, 27, 36, 0, 131065, 36, 0, 131066, 36, 0, 131067, 36, 0, 131068, 36, 0, 131069, 36, 0, 131070, 36, 0, 131071, 36, 0, 65536, 36, 0, 65537, 36, 0, 65538, 36, 0, 65539, 36, 0, 65540, 36, 0, 65541, 36, 0, 65542, 36, 0, 65543, 36, 0, 65544, 36, 0, 65545, 36, 0, 65546, 36, 0, 65547, 36, 0, 65548, 36, 0, 65549, 36, 0, 65550, 36, 0, 65551, 36, 0, 65552, 36, 0, 65553, 36, 0, 65554, 36, 0, 65555, 36, 0, 65556, 36, 0, 65557, 36, 0, 65558, 36, 0, 65559, 36, 0, 65560, 36, 0, 65561, 36, 0, 65562, 36, 0, 65563, 36, 0, 196601, 36, 0, 196602, 36, 0, 196603, 36, 0, 196604, 36, 0, 196605, 36, 0, 196606, 36, 0, 196607, 36, 0, 131072, 36, 0, 131073, 36, 0, 131074, 36, 0, 131075, 36, 0, 131076, 36, 0, 131077, 36, 0, 131078, 36, 0, 131079, 36, 0, 131080, 36, 0, 131081, 36, 0, 131082, 36, 0, 131083, 36, 0, 131084, 36, 0, 131085, 36, 0, 131086, 36, 0, 131087, 36, 0, 131088, 36, 0, 131089, 36, 0, 131090, 36, 0, 131091, 36, 0, 131092, 36, 0, 131093, 36, 0, 131094, 36, 0, 131095, 36, 0, 131096, 36, 0, 131097, 36, 0, 131098, 36, 0, 131099, 36, 0, 262137, 36, 0, 262138, 36, 0, 262139, 36, 0, 262140, 36, 0, 262141, 36, 0, 262142, 36, 0, 262143, 36, 0, 196608, 36, 0, 196609, 36, 0, 196610, 36, 0, 196611, 36, 0, 196612, 36, 0, 196613, 36, 0, 196614, 36, 0, 196615, 36, 0, 196616, 36, 0, 196617, 36, 0, 196618, 36, 0, 196619, 36, 0, 196620, 36, 0, 196621, 36, 0, 196622, 36, 0, 196623, 36, 0, 196624, 36, 0, 196625, 36, 0, 196626, 36, 0, 196627, 36, 0, 196628, 36, 0, 196629, 36, 0, 196630, 36, 0, 196631, 36, 0, 196632, 36, 0, 196633, 36, 0, 196634, 36, 0, 196635, 36, 0, 327673, 36, 0, 327674, 36, 0, 327675, 36, 0, 327676, 36, 0, 327677, 36, 0, 327678, 36, 0, 327679, 36, 0, 262144, 36, 0, 262145, 36, 0, 262146, 36, 0, 262147, 36, 0, 262148, 36, 0, 262149, 36, 0, 262150, 36, 0, 262151, 36, 0, 262152, 36, 0, 262153, 36, 0, 262154, 36, 0, 262155, 36, 0, 262156, 36, 0, 262157, 36, 0, 262158, 36, 0, 262159, 36, 0, 262160, 36, 0, 262161, 36, 0, 262162, 36, 0, 262163, 36, 0, 262164, 36, 0, 262165, 36, 0, 262166, 36, 0, 262167, 36, 0, 262168, 36, 0, 262169, 36, 0, 262170, 36, 0, 262171, 36, 0, 393209, 36, 0, 393210, 36, 0, 393211, 36, 0, 393212, 36, 0, 393213, 36, 0, 393214, 36, 0, 393215, 36, 0, 327680, 36, 0, 327681, 36, 0, 327682, 36, 0, 327683, 36, 0, 327684, 36, 0, 327685, 36, 0, 327686, 36, 0, 327687, 36, 0, 327688, 36, 0, 327689, 36, 0, 327690, 36, 0, 327691, 36, 0, 327692, 36, 0, 327693, 36, 0, 327694, 36, 0, 327695, 36, 0, 327696, 36, 0, 327697, 36, 0, 327698, 36, 0, 327699, 36, 0, 327700, 36, 0, 327701, 36, 0, 327702, 36, 0, 327703, 36, 0, 327704, 36, 0, 327705, 36, 0, 327706, 36, 0, 327707, 36, 0, 458745, 36, 0, 458746, 36, 0, 458747, 36, 0, 458748, 36, 0, 458749, 36, 0, 458750, 36, 0, 458751, 36, 0, 393216, 36, 0, 393217, 36, 0, 393218, 36, 0, 393219, 36, 0, 393220, 36, 0, 393221, 36, 0, 393222, 36, 0, 393223, 36, 0, 393224, 36, 0, 393225, 36, 0, 393226, 36, 0, 393227, 36, 0, 393228, 36, 0, 393229, 36, 0, 393230, 36, 0, 393231, 36, 0, 393232, 36, 0, 393233, 36, 0, 393234, 36, 0, 393235, 36, 0, 393236, 36, 0, 393237, 36, 0, 393238, 36, 0, 393239, 36, 0, 393240, 36, 0, 393241, 36, 0, 393242, 36, 0, 393243, 36, 0, 524281, 36, 0, 524282, 36, 0, 524283, 36, 0, 524284, 36, 0, 524285, 36, 0, 524286, 36, 0, 524287, 36, 0, 458752, 36, 0, 458753, 36, 0, 458754, 36, 0, 458755, 36, 0, 458756, 36, 0, 458757, 36, 0, 458758, 36, 0, 458759, 36, 0, 458760, 36, 0, 458761, 36, 0, 458762, 36, 0, 458763, 36, 0, 458764, 36, 0, 458765, 36, 0, 458766, 36, 0, 458767, 36, 0, 458768, 36, 0, 458769, 36, 0, 458770, 36, 0, 458771, 36, 0, 458772, 36, 0, 458773, 36, 0, 458774, 36, 0, 458775, 36, 0, 458776, 36, 0, 458777, 36, 0, 458778, 36, 0, 458779, 36, 0, 589817, 36, 0, 589818, 36, 0, 589819, 36, 0, 589820, 36, 0, 589821, 36, 0, 589822, 36, 0, 589823, 36, 0, 524288, 36, 0, 524289, 36, 0, 524290, 36, 0, 524291, 36, 0, 524292, 36, 0, 524293, 36, 0, 524294, 36, 0, 524295, 36, 0, 524296, 36, 0, 524297, 36, 0, 524298, 36, 0, 524299, 36, 0, 524300, 36, 0, 524301, 36, 0, 524302, 36, 0, 524303, 36, 0, 524304, 36, 0, 524305, 36, 0, 524306, 36, 0, 524307, 36, 0, 524308, 36, 0, 524309, 36, 0, 524310, 36, 0, 524311, 36, 0, 524312, 36, 0, 524313, 36, 0, 524314, 36, 0, 524315, 36, 0, 655353, 36, 0, 655354, 36, 0, 655355, 36, 0, 655356, 36, 0, 655357, 36, 0, 655358, 36, 0, 655359, 36, 0, 589824, 36, 0, 589825, 36, 0, 589826, 36, 0, 589827, 36, 0, 589828, 36, 0, 589829, 36, 0, 589830, 36, 0, 589831, 36, 0, 589832, 36, 0, 589833, 36, 0, 589834, 36, 0, 589835, 36, 0, 589836, 36, 0, 589837, 36, 0, 589838, 36, 0, 589839, 36, 0, 589840, 36, 0, 589841, 36, 0, 589842, 36, 0, 589843, 36, 0, 589844, 36, 0, 589845, 36, 0, 589846, 36, 0, 589847, 36, 0, 589848, 36, 0, 589849, 36, 0, 589850, 36, 0, 589851, 36, 0 )
_sections_unfolded = [ "Cell" ]

[node name="MoveAreas" type="Node2D" parent="." index="4"]

visible = false
position = Vector2( 14.3539, -4.1011 )
script = ExtResource( 4 )

[node name="DoorArea" parent="MoveAreas" index="0" instance=ExtResource( 5 )]

position = Vector2( 931.982, 215.869 )

[node name="DoorTimer" type="Timer" parent="MoveAreas/DoorArea" index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="SwitchAreas" type="Node2D" parent="." index="5"]

position = Vector2( 45.1122, -8.20224 )

[node name="SwitchArea1" parent="SwitchAreas" index="0" instance=ExtResource( 6 )]

position = Vector2( 1053.16, -65.1013 )
scale = Vector2( 1.48338, 2.02124 )

[node name="SwitchArea2" parent="SwitchAreas" index="1" instance=ExtResource( 6 )]

position = Vector2( 1489.27, -68.8916 )
scale = Vector2( 1.48338, 2.02124 )

[connection signal="body_shape_entered" from="Chests/chest1" to="Chests" method="_on_chest1_body_shape_entered"]

[connection signal="body_shape_exited" from="Chests/chest1" to="Chests" method="_on_chest1_body_shape_exited"]

[connection signal="body_shape_entered" from="Chests/chest2" to="Chests" method="_on_chest2_body_shape_entered"]

[connection signal="body_shape_exited" from="Chests/chest2" to="Chests" method="_on_chest2_body_shape_exited"]

[connection signal="body_shape_entered" from="Chests/chest3" to="Chests" method="_on_chest3_body_shape_entered"]

[connection signal="body_shape_exited" from="Chests/chest3" to="Chests" method="_on_chest3_body_shape_exited"]

[connection signal="body_shape_entered" from="Chests/chest4" to="Chests" method="_on_chest4_body_shape_entered"]

[connection signal="body_shape_exited" from="Chests/chest4" to="Chests" method="_on_chest4_body_shape_exited"]

[connection signal="body_shape_entered" from="MoveAreas/DoorArea" to="MoveAreas" method="_on_DoorArea_body_shape_entered"]

[connection signal="body_shape_exited" from="MoveAreas/DoorArea" to="MoveAreas" method="_on_DoorArea_body_shape_exited"]

[connection signal="body_shape_entered" from="SwitchAreas/SwitchArea1" to="SwitchAreas/SwitchArea1" method="_on_SwitchArea_body_shape_entered"]

[connection signal="body_shape_exited" from="SwitchAreas/SwitchArea1" to="SwitchAreas/SwitchArea1" method="_on_SwitchArea_body_shape_exited"]

[connection signal="body_shape_entered" from="SwitchAreas/SwitchArea2" to="SwitchAreas/SwitchArea2" method="_on_SwitchArea_body_shape_entered"]

[connection signal="body_shape_exited" from="SwitchAreas/SwitchArea2" to="SwitchAreas/SwitchArea2" method="_on_SwitchArea_body_shape_exited"]


